slider/java.css
*{
    box-sizing: border-box;
    margin:0;
    padding:0;
}

    html{
        scroll-behavior: smooth;
        height:100%;
        width:100%;
    }
    body, .slide{
        height:100vh;
        width:100%;
        padding:0;
    }
    body{
        position: relative;
        margin:0;
        padding:0;
        height:100%;
        width:100%;
        overflow:hidden;
    }

.content{
    visibility: hidden;
}
.contentBody{
    margin:0 5em;
}

.overlay{
    display:flex;
    height:100vh;
    width:100vw;
    margin:0;
    justify-content:space-evenly;
    align-items:center;
  }
  
  .landPageLetters{
    height:80%;
    width:20%;
    opacity:0;
    display:flex;
    justify-content:center;
    align-items:center;
    color:white;
    font-size:5em;
  }
  
  .overlay{
    height:100%;
    position:absolute;
    width:100%;
    background:rgba(0,0,0,0.9);
    z-index:1;
    visibility:hidden;
    transform: translateY(-100%);
  }
  
  .overlayContainer{
    display:flex;
    position:absolute;
    height:100vh;
    width:100vw;
    margin:0;
    background:black;
    justify-content:space-evenly;
    background-image:url('imgs/landingpage.jpeg');
    background-size:cover;
    background-blend-mode: color;
    background-color:rgba(0,0,0,0.8);
    align-items:center;
    font-family: Open Sans Condensed;
    z-index:100;
  }

  .enterButton{
    position:absolute;
    font-family: "Open Sans Condensed";
    z-index:2;
    padding:1.2em 2em;
    border-radius:3px;
    font-size:1em;
    border:1px solid white;
    transition:.2s ease;
    opacity:0;
  }

  .enterButton:focus{outline:0}

  .enterButton:hover{
    transform:scale(1.1);
    cursor:pointer;
    letter-spacing:.1em;
  }
   

    
    /* SlideShow */
    .slides{
        margin-left:auto;
        margin-right:auto;
        margin-bottom:2em;
        padding:0;
        overflow-x:hidden;
        width:95%;
        box-shadow: -1px 1px 13px 0px rgba(8, 8, 8, 0.527);
    }
    .slide{
        background-size: cover;
        -webkit-background-size: cover;
        -moz-background-size: cover;
        -o-background-size: cover;
        background-repeat: no-repeat;
        background-position: center;
        background-blend-mode: color;
        background-color:rgba(0,0,0,0.4);
        position:absolute;
        transition: ease;
        transition-duration: .7s;
        height:100%;
        font-family: "Staatliches";
        letter-spacing:0.2em;
    }
    .slide h1{
        color:white;
        padding:3px;
    }

    .slider-1{
        background-image: url('imgs/coffee1.jpeg');

    }
    .slider-2{
        background-image: url('imgs/coffee2.jpeg');

    }
    .slider-3{
        background-image: url('imgs/coffee3.jpeg');
    }
    .slider-4{
        background-image: url('imgs/coffee4.jpeg');
    }
    .slider-5{
        background-image: url('imgs/coffee5.jpeg');
    }
    
    .slides{
        position: relative;
        height:50vh;
    }

    .right{
        transform: translateX(100%);
        position: absolute;
        top:46.9%;
        right:0;
        padding-right:.8em;
        transition: ease-in-out;
        transition-duration: .3s;
        cursor:pointer;
    }


    .left{
        transform: translateX(-100%);
        position: absolute;
        top:46.9%;
        left:0;
        padding-left:.8em;
        transition: ease-in-out;
        transition-duration: .3s;
        cursor:pointer;
    }
    .showArrow{
        transform: translateX(0);
    }
    .showImg{
        opacity:1;

    }
    .hideImg{
        opacity:0;
    }
    .java{
        display:inline-block;
        font-size:5em;
        border: 4px solid white;
        padding: 0 .3em;
        line-height: 1em;
        color:white;
        transform: translateX(.5em);
        margin-top:.3em;
    }

    .codingCafe{
        color:white;
        font-weight: lighter;
        transform: translateX(100px);
    }
/* NAVIGATION */

    .navbar {
    background: black;
    top: 0;
    width: 100%;
    height:3rem;
    transition:all 1s ease;
    position: relative;
    z-index: 1;
    margin: 0 0 2em;
    z-index:100;
    position:relative;
    }

    .fixed-nav .navbar {
    position: fixed;
    box-shadow: 0 5px 0 rgba(0,0,0,0.1);
    }

    .navbar ul {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    height:100%;
    }

    .navbar li {
    flex: 1;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
    }

    .navbar a:hover{
        letter-spacing: 1px;
    }
    .navbar a{
        text-decoration: none;
        color:white;
        font-family: "Staatliches";
        font-weight:lighter;
        transition: .3s ease;
    }

    li.logo {
    max-width:0;
    overflow: hidden;
    background: white;
    transition: all 0.5s;
    font-weight: 600; 
    font-size: 30px;
    z-index:100;
    height:3rem;
    }
    .logo a{
        color:black;
    }

    .fixed-nav li.logo {
    max-width: 500px;
    }
/* MENU */

.menuChoice h1{
    flex-basis:100%;
}

    .menuChoice{
        display:flex;
        justify-content: space-evenly;
        box-shadow: -2px 2px 20px rgba(0, 0, 0, 0.445);
        border-radius:6px;
        font-family:"Staatliches";
        margin:8em auto 4em;
        width:55%;
        align-items: center;
        padding:2em;
    }
    .menuChoice span{
        padding:0 1em;
    }
    .choice{
        display:flex;
        place-items: center;
        background-color: #161616;;
        padding: 1em 2em;
        border-radius: 8px;
        cursor: pointer;
        transition: .3s ease;
    }
    .choice:hover{
        background-color: white;
        box-shadow: inset 0px 1px 5px 0px black;
    }
    
    .choice a{
        text-decoration: none;
        color:white;
        letter-spacing: 1.5px;
    }
    .choice:hover a{
        color:black;
    }


    .menuImgContainer{
        position:relative;
        /* display: flex; */
        align-items: center;
        color: white;
        justify-content: center;
    }

    .menuImg{
        max-height:200px;
        border-radius:50%;
        transition: all .3s ease;
    }
    .menuImgContainer:hover .menuImg{
        transform: scale(1.1);
        cursor: pointer;
        box-shadow: -1px 1px 17px black;
    }

    .menuImgContainer .name{
        position: absolute;
        color:white;
        top: 50%;
        left: 50%;
        transform: translate(-50%,-50%);
        font-family:'Open Sans';
        font-weight:400;
        padding: .1em .2em;
        pointer-events: none;
    }
    

/* active class for menu */
    .menu.active .menuImgContainer {
        opacity:.3;
        transform:scale(1.1);
        filter:blur(5px);
    }
    
    .menu .menuImgContainer.active {
        opacity:1;
        transform:scale(1);
        filter:blur(0);
    }


/* COLD MENU */
    .coldMenu{
        display:none;
        opacity:0.1;
        /* display:flex; */
        flex-wrap: wrap;
        justify-content: space-evenly;
        padding:0;
    }

/* HOT MENU */
    .hotMenu{
        display:none;
        /* display:flex; */
        flex-wrap: wrap;
        justify-content: space-evenly;
        padding:0;
    }

    .menu{
        margin:0 1em;
    }
/* ABOUT SECTION */
    .headingWrapper{
    font-size:10rem;
    padding:0 0 0 .2em;
    border-radius:4px;
    margin:0 0 0 .2em;
    font-family:'Open Sans Condensed';
    font-weight:700;
    color:white;
    position:relative;
    background-color:black;
    height:200px;
    width:40%;
    float:left;
    }
    .headingWrapper span{
    display:inline-block;
    position:absolute;
    }

    .b{
    z-index:1;     transform:translateX(.4em);
    text-shadow: -3px 0px 20px black, 2px 1px 18px black;
    }

    .o{
    transform:translateX(.75em)
    }
    .u{
    transform:translateX(1.17em);
    z-index:1;
    text-shadow: -3px -2px 18px black;

    }
    .t{
    transform:translateX(1.64em);
    z-index:1;
    text-shadow: -2px -2px 20px black;
    }

    .aboutContent{
        column-count: 3;
        padding: 0 3em 0 2em;
    }

    .lorem{
        margin:5em;
    }

/* SCROLLBAR     */
    ::-webkit-scrollbar-track
    {
        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
        border-radius: 10px;
        background-color: #F5F5F5;
    }

    ::-webkit-scrollbar
    {
        width: 11px;
        background-color: #F5F5F5;
    }

    ::-webkit-scrollbar-thumb
    {
        border-radius: 10px;
        background-color:black
    }
/* MEDIA QUERIES    */

    @media(max-width:800px){
        .headingWrapper{
            right: .4em;
        }
        .content{
            margin:0;
        }
        .menuChoice{
            flex-direction: column;
            width:90%;
        }
        .menuChoice h1{
            padding-bottom:.8em;
        }
        .menu{
            flex-direction:column;
            align-items: center;
        }
    }

    @media(max-width:1340px){
        .aboutContent{
            clear:both;
            padding-top: 2em;
        }
    }

    @media(max-width:790px){
        .aboutContent{
            clear:both;
            column-count:2;
            padding-top: 2em;
        }

        .headingWrapper{
            /* padding-right:3em; */
            width:90vw;
            margin:0;
        }
    }

    @media(max-width:650px){
        .aboutContent{
            column-count: 1;
        
        }
    }

   

      

